added post area content in the files

--- a/reddit.html
+++ b/reddit.html
@@ -1,40 +1,75 @@
 <!doctype html>
 <html>
-  <head>
-      <title>CS431-Project1</title>
-      <link rel="stylesheet" type="text/css" href="style.css">
-      <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-	  <script src="reddit.js"></script>
-  </head>
-  <body>
-      <header>
-          <div class="header-container">
-               <h3>Miny Reddit</h3>
-                <div class="login-area">
-                     <form>
-                        <p><input type="text" value="Email"></p>
-                        <p><input type="password" value="Password"></p>
-                        <p><input type="submit"  value="login"></p>
-                     </form>
-               </div>
-          </div>
-      </header>
-      <main>
-          <div class="main-container">
-              <div class="top-menu">
-                 <div class="tabs">
-                     <a href=""><span class="active">Newest</span></a><a href=""><span>Oldest</span></a></a>
-                 </div>
-              </div>
 
-               <div class="postsContainer">
-                     
-             </div>
-      </main>
-      <footer>
-          <div class="footer-container">
+<head>
+    <title>CS431-Project1</title>
+    <link rel="stylesheet" href="https://code.getmdl.io/1.1.2/material.indigo-pink.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" type="text/css" href="style.css">
+
+    <script src="https://code.getmdl.io/1.1.2/material.min.js"></script>
+    <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+    <script src="reddit.js"></script>
+</head>
+
+<body>
+    <header>
+        <div class="header-container">
+            <h3>Miny Reddit</h3>
+            <div class="login-area">
+                <form>
+                    <p><input type="text" value="Email"></p>
+                    <p><input type="password" value="Password"></p>
+                    <p><input type="submit" value="login"></p>
+                </form>
+            </div>
           </div>
-      </footer>
-      
-  </body>
+    </header>
+    <main>
+        <div class="main-container">
+            <div class="top-menu">
+                <div class="tabs">
+                    <a href=""><span class="active">Newest</span></a><a href=""><span>Oldest</span></a></a>
+                </div>
+            </div>
+
+            <div class="postsContainer">
+              <br><br><br><br><br>
+                <div class="posting-area">
+                  <form>
+                <fieldset>
+                    <legend>Add a new post!!</legend><br>
+                    <input type="checkbox" id="checkbox">
+                    <span class="mdl-checkbox__label">Login</span><br>
+                    <div id="textinput" class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                        <textarea class="mdl-textfield__input" type="text" rows="2" id="input1" ></textarea>
+                        <label class="mdl-textfield__label" for="input1">Text lines...</label>
+                        <span class="mdl-textfield__error"></span>
+                    </div><br>
+                    <div id="urlinput" class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                        <input class="mdl-textfield__input" type="url" id="input2">
+                        <label class="mdl-textfield__label" for="input2">Enter URL...</label>
+                        <span class="mdl-textfield__error">Enter valid URL</span>
+                    </div><br>
+                    <div id="imageinput" class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                        <input class="mdl-textfield__input" type="url" id="input3">
+                        <label class="mdl-textfield__label" for="input3">Enter image URL...</label>
+                        <span class="mdl-textfield__error">Enter valid image URL</span>
+                    </div><br>
+                    <button id="postbutton" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" type="submit">Post</button><br>
+                    <span id="spanbutton" class="mdl-textfield__error"></span>
+                </fieldset>
+                </form>
+
+            </div>
+            </div>
+
+    </main>
+    <footer>
+        <div class="footer-container">
+        </div>
+    </footer>
+
+</body>
+
 </html>
