--- a/reddit.html
+++ b/reddit.html
@@ -4,74 +4,139 @@
 <head>
     <title>CS431-Project1</title>
 
-    <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.1.min.js" type="text/JavaScript"></script>
     <!--JQuery validation script-Start-->
-    <script src="http://jqueryvalidation.org/files/dist/jquery.validate.min.js"></script>
+    <script src="http://jqueryvalidation.org/files/dist/jquery.validate.min.js" type="text/JavaScript"></script>
     <script src="http://jqueryvalidation.org/files/dist/additional-methods.min.js"></script>
     <!--JQuery validation script-End-->
-    <script src="https://code.getmdl.io/1.1.2/material.min.js"></script>
-
-    <script src="reddit.js"></script>
-    <link rel="stylesheet" href="https://code.getmdl.io/1.1.2/material.indigo-pink.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <!-- Start materialize css-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
+    <!--Import Google Icon Font-->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--End materialize css-->
     <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 
 <body>
-    <header>
-        <div class="header-container">
-            <h3>Miny Reddit</h3>
-            <div class="login-area">
-                <form>
-                    <p><input type="text" value="Email"></p>
-                    <p><input type="password" value="Password"></p>
-                    <p><input type="submit" value="login"></p>
-                </form>
+    <div id="wrapper">
+        <header>
+            <div class="header-container">
+                <nav>
+                    <div class="nav-wrapper">
+                        <div class="pagetitle">
+                            <img src="image/letter.png">
+                            <a href="#!" class="brand-logo">eHerald</a></div>
+                        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+                        <ul class="right hide-on-med-and-down">
+                            <li><a href="#">Log In</a></li>
+                            <li><a href="#">Sign Up</a></li>
+                            <li><a class="postnews modal-trigger" href="#modal1">Post News</a></li>
+                            <li class="search">
+                                <form>
+                                    <div class="search-wrapper">
+                                        <i class="material-icons">search</i>
+                                        <input id="search" type="text" placeholder="Search" autocomplete="off">
+
+                                    </div>
+                                </form>
+                            </li>
+                        </ul>
+                        <ul class="side-nav" id="mobile-demo">
+                            <li><a href="#">Log In</a></li>
+                            <li><a href="#">Sign Up</a></li>
+                            <li><a class="postnews modal-trigger" href="#modal1">Post News</a></li>
+                            <li><a href="#"><i class="material-icons">search</i></a></li>
+                        </ul>
+                    </div>
+                </nav>
             </div>
-        </div>
-    </header>
-    <main>
-        <div class="main-container">
-            <div class="top-menu">
-                <div class="tabs">
-                    <a href=""><span class="active">Newest</span></a><a href=""><span>Oldest</span></a></a>
+
+        </header>
+        <main>
+
+            <div class="pagelayout">
+                <div class="center tabs">
+                    <a href=""><span class="active">Newest</span></a><a href=""><span>Oldest</span></a>
+                    <a href=""><span>Trending</span></a><br>
+
+                    <div class="divider line"></div> <br>
+                </div>
+
+                <!-- Modal Structure -->
+                <div id="modal1" class="modal">
+                    <div class="posting-area">
+                        <form id="postform">
+                            <div class="modal-content">
+
+                                <input type="checkbox" name="checkbox" id="checkbox">
+                                <span>Login</span><br>
+                                <div id="textinput" class="mdl-textfield mdl-js-textfield ">
+                                    <label id="posttitle" for="input1" data-error="">Post Title..</label>
+                                    <input class="input-field validate" type="text" name="input1" id="input1">
+                                </div><br>
+                                <div id="urlinput" class="mdl-textfield mdl-js-textfield ">
+                                    <label id="mainurl" for="input2" >Enter URL...</label>
+                                    <input class='input-field validate' name="input2" type="url" id="input2">
+                                </div><br>
+                                <div class="addimage">
+                                    <a class="btn waves-effect waves-light grey">Add Image or Video URL</a>
+                                </div>
+                            </div>
+
+                            <div class="modal-footer">
+                                <button id="postbutton" class="mdl-button mdl-js-button  mdl-js-ripple-effect" type="submit">Post</button>
+                                <span id="spanbutton"></span>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+
+                <div class="postsContainer">
+                </div>
+                <!-- An empty div which will be populated using jQuery for pagination -->
+                <div id='page_navigation'>
+                    <ul class="pagination">
+
+                    </ul>
                 </div>
             </div>
-            <div class="postsContainer">
-                <br><br><br><br><br>
-                <!--Start POST fields code-->
-                <div class="posting-area">
-                    <form id="postform">
-                        <fieldset>
-                            <legend>Add a new post!!</legend><br>
-                            <input type="checkbox" name="checkbox" id="checkbox">
-                            <span class="mdl-checkbox__label">Login</span><br>
-                            <div id="textinput" class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                <textarea class="mdl-textfield__input" name="input1" type="text" rows="2" id="input1"></textarea>
-                                <label class="mdl-textfield__label" for="input1">Text lines...</label>
-
-                            </div><br>
-                            <div id="urlinput" class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                <input class="mdl-textfield__input" name="input2" type="url" id="input2">
-                                <label class="mdl-textfield__label" for="input2">Enter URL...</label>
-
-                            </div><br>
-                            <div id="imageinput" class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                <input class="mdl-textfield__input" name="input3" type="url" id="input3" class="cleardefault">
-                                <label class="mdl-textfield__label" for="input3">Enter image URL...</label>
-
-                            </div><br>
-                            <button id="postbutton" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" type="submit">Post</button><br><br>
-                            <span id="spanbutton" class="mdl-textfield__error"></span>
-                        </fieldset>
-                    </form>
+        </main>
+        <!--footer-Sumana-->
+        <footer class=" page-footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col l6 s12">
+                        <h5 class="white-text">Footer Content</h5>
+                        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                    </div>
+                    <div class="col l4 offset-l2 s12">
+                        <h5 class="white-text">Links</h5>
+                        <ul>
+                            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                        </ul>
+                    </div>
                 </div>
-                <!--End POST fields code-->
             </div>
-    </main>
-    <footer>
-        <div class="footer-container">
-        </div>
-    </footer>
+            <div class="footer-copyright">
+                <div class="container">
+                    © 2014 Copyright Text
+                    <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+                </div>
+            </div>
+        </footer>
+    </div>
+    <script src="https://code.getmdl.io/1.1.2/material.min.js"></script>
+    <script src="reddit.js"></script>
+
 </body>
+
 </html>
